# Deep-s-Portfolio

./: .gitignore  README.md
Day-01-Introduction-To-Agents/: README.md
Day-02-Agent-Tools-And-Interoperability/: README.md
Day-03-Agent-Skills/: README.md
Day-03-Agent-Skills/customer_support_agent/: README.md  agent.py  requirements.txt
Day-04-Agent-Security-And-Evaluation/: README.md
Day-04-Agent-Security-And-Evaluation/Expense-Approval-Agent/ambient-expense-agent/: Makefile  README.md  agents-cli-manifest.yaml  pyproject.toml
Day-04-Agent-Security-And-Evaluation/Expense-Approval-Agent/ambient-expense-agent/app/: __init__.py  agent.py  tools.py
Day-04-Agent-Security-And-Evaluation/Expense-Approval-Agent/ambient-expense-agent/expense_agent/: __init__.py  agent.py  config.py  fast_api_app.py
Day-04-Agent-Security-And-Evaluation/Expense-Approval-Agent/ambient-expense-agent/tests/: test_expense_agent.py
Day-04-Agent-Security-And-Evaluation/Expense-Approval-Agent/ambient-expense-agent/tests/eval/: eval_config.yaml
Day-04-Agent-Security-And-Evaluation/Expense-Approval-Agent/ambient-expense-agent/tests/eval/datasets/: basic-dataset.json
Day-05-Capstone-Project/expense-agent/: README.md
src/: App.tsx
src/components/: Hero.tsx  Terminal.tsx  TerminalModal.tsx
